--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -32,7 +32,7 @@
             </div>
             <div class="tx-hero__content">
                 <h1>可行的技术文档</h1>
-                <p>{{ config.site_description }}。五分钟即可内完成配置。</p>
+                <p>{{ config.site_description }}五分钟即可内完成配置。</p>
                 <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
           入门
         </a>
